--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-date-range": "^1.4.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
+    "react-helmet-async": "^2.0.5",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.11.2",
