--- a/package.json
+++ b/package.json
@@ -11,15 +11,18 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.14",
+    "@shadcn/ui": "^0.0.4",
     "@stripe/react-stripe-js": "^2.1.0",
     "@stripe/stripe-js": "^1.54.0",
     "@tanstack/react-query": "^5.64.2",
     "axios": "^1.6.1",
+    "clsx": "^2.1.1",
     "date-fns": "^2.30.0",
     "firebase": "^9.22.0",
-    "lucide-react": "^0.471.1",
+    "lucide-react": "^0.471.2",
     "query-string": "^8.1.0",
     "react": "^18.2.0",
+    "react-confetti": "^6.2.2",
     "react-date-range": "^1.4.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
@@ -27,9 +30,12 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.11.2",
+    "react-simple-typewriter": "^5.0.1",
     "react-spinners": "^0.13.8",
     "react-toastify": "^11.0.3",
-    "sweetalert2": "^11.15.10"
+    "react-use": "^17.6.0",
+    "sweetalert2": "^11.15.10",
+    "tailwind-merge": "^2.6.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
