--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "aircnc-client",
+  "name": "was-client",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -19,6 +19,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^2.30.0",
     "firebase": "^9.22.0",
+    "framer-motion": "^12.0.6",
     "lucide-react": "^0.471.2",
     "query-string": "^8.1.0",
     "react": "^18.2.0",
